--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,62 @@
 <?xml version="1.0"?>
+<!--
+  Copyright 2011 John Casey
+  
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+  
+    http://www.apache.org/licenses/LICENSE-2.0
+  
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-expression-plugin</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <parent>
+    <groupId>org.sonatype.oss</groupId>
+    <artifactId>oss-parent</artifactId>
+    <version>7</version>
+  </parent>
+  
+  <groupId>org.commonjava.maven.plugins</groupId>
+  <artifactId>expression-maven-plugin</artifactId>
+  <version>0.1-SNAPSHOT</version>
+  
   <packaging>maven-plugin</packaging>
-  <name>maven-expression-plugin</name>
+  
+  <name>Maven Expressions Plugin</name>
+  <description>Plugin for resolving expressions the same way a plugin parameter, POM interpolation, or similar process would resolve.</description>
+  
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   
+  <scm>
+    <connection>scm:git:http://jdcasey@github.com/jdcasey/expression-maven-plugin.git</connection>
+    <developerConnection>scm:git:git@github.com:jdcasey/expression-maven-plugin.git</developerConnection>
+    <url>http://github.com/jdcasey/expression-maven-plugin</url>
+  </scm>
+  
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.apache.maven</groupId>
+        <artifactId>maven</artifactId>
+        <version>3.0.3</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+  
+  <prerequisites>
+    <maven>[3.0,]</maven>
+  </prerequisites>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -20,12 +67,18 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-core</artifactId>
-      <version>3.0.3</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
-      <version>3.0.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-model</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-model-builder</artifactId>
     </dependency>
   </dependencies>
   
@@ -34,6 +87,7 @@
       <plugins>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
+          <version>2.3.2</version>
           <configuration>
             <source>1.5</source>
             <target>1.5</target>
@@ -42,20 +96,6 @@
         <plugin>
           <artifactId>maven-plugin-plugin</artifactId>
           <version>2.9</version>
-          <!-- <dependencies>
-            <dependency>
-              <groupId>org.apache.maven</groupId>
-              <artifactId>maven-plugin-tools-java5</artifactId>
-              <version>2.2-SNAPSHOT</version>
-            </dependency>
-          </dependencies>
-          <executions>
-            <execution>
-              <goals>
-                <goal>post-compile-descriptor</goal>
-              </goals>
-            </execution>
-          </executions> -->
         </plugin>
       </plugins>
     </pluginManagement>
