[maven-release-plugin] prepare release expression-maven-plugin-0.1

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   
   <groupId>org.commonjava.maven.plugins</groupId>
   <artifactId>expression-maven-plugin</artifactId>
-  <version>0.1-SNAPSHOT</version>
+  <version>0.1</version>
   
   <packaging>maven-plugin</packaging>
   
